<resources>
    <string name="app_name">Two-Dice Pig</string>
    <string name="player_one_total">Player 1 Total:</string>
    <string name="player_two_total">Player 2 Total:</string>
    <string name="current_player_label">Current Player:</string>
    <string name="roll_dice_btn_text">Roll Dice</string>
    <string name="hold_btn_text">Hold</string>
    <string name="turn_total_label_text">Turn Total:</string>
    <string name="player_one_victory_msg">Player 1 Won!</string>
    <string name="player_two_victory_msg">Player 2 Won!</string>
    <string name="play_again_btn_text">Play Again?</string>
</resources>